wifi/ifd: Allow D-Bus activation to launch iwd

iwd does not ship activation configuration yet; until then we simply
fail the way we already do.

https://bugzilla.gnome.org/show_bug.cgi?id=796805
(cherry picked from commit 21f955b4dde1696aa8cb2b714d52615a63ce5569)